@@ -1073,6 +1073,7 @@ void InitFunctionHashing(void);
 void InitBaseEnv(void);
 void InitGlobalEnv(void);
 Rboolean R_current_trace_state(void);
+Rboolean R_current_debug_state(void);
 Rboolean R_has_methods(SEXP);
 void R_InitialData(void);
 SEXP R_possible_dispatch(SEXP, SEXP, SEXP, SEXP, Rboolean);
